fix(styles): remove top margin from h5 for consistent spacing

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -114,7 +114,7 @@ h5,
 h6 {
   clear: both;
   color: #171717;
-  margin: 10px 0 20px;
+  margin: 0px 0 20px;
 }
 
 h1 {
